Change-Id: I2b134f51314d110b5c88b11ea03d94be4d3f7e8c Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,32 +1,26 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
+<!DOCTYPE html> 
+<html> 
+	<head> 
+	<title>My Page</title> 
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+</head> 
+<body> 
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
+<div data-role="page">
 
-    div#welcome
-    {
-        color: #FFFFFF;
-        width:  600px;
-        height: 400px;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
+	<div data-role="header">
+		<h1>My Title</h1>
+	</div><!-- /header -->
 
-    div#more-information
-    {
-        height: 100%;
-    }
-</style>
-<div id="welcome">
-    <div id="more-information">
-        
-    </div>
-</div>
+	<div data-role="content">	
+		<p>Hello world</p>		
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
+</body>
+</html>
+
