Change-Id: I786a4900e7d0183a019c31de3bfed2b2e55dffd3 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,11 +12,11 @@
 <div data-role="page">
 
 	<div data-role="header">
-		<h1>My Title</h1>
+		<h1>תורנויות שלנו</h1>
 	</div><!-- /header -->
-
+ 
 	<div data-role="content">	
-		<p>Hello world</p>		
+		<a href="#" data-role="button" data-icon="star" data-theme="a">Button</a>
 	</div><!-- /content -->
 
 </div><!-- /page -->
