--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,6 +2,7 @@
 <html> 
 	<head> 
 	<title>My Page</title> 
+	<meta http-equiv="content-type" content="text/html;charset=iso-8859-8-i">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
@@ -16,9 +17,13 @@
 	</div><!-- /header -->
  
 	<div data-role="content">	
-		<a href="#" data-role="button" data-icon="star" data-theme="a">Button</a>
+		<a href="#" data-role="button" data-icon="star" data-theme="a">תורנות</a>
+		<a href="#" data-role="button" data-icon="star" data-theme="a">ססיות</a>
 	</div><!-- /content -->
 
+	
+	
+	
 </div><!-- /page -->
 
 </body>
