Change-Id: I57c3f1ef719088c3bd29b50d004f4af0f956df93 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -13,12 +13,12 @@
 <div data-role="page">
 
 	<div data-role="header">
-		<h1>תורנויות שלנו</h1>
+		<h1>Shifts </h1>
 	</div><!-- /header -->
  
 	<div data-role="content">	
-		<a href="#" data-role="button" data-icon="star" data-theme="a">תורנות</a>
-		<a href="#" data-role="button" data-icon="star" data-theme="a">ססיות</a>
+		<a href="#" data-role="button" data-theme="a">Report Shift</a> 
+		<a href="#" data-role="button" data-theme="a">Report Sessions</a>
 	</div><!-- /content -->
 
 	
