Change-Id: I70bfdebe1935d79f9e3f8bb3d87f2c469ebab511 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,15 +12,19 @@
 
 <div data-role="page">
 
-	<div data-role="header">
-		<h1>Shifts </h1>
-	</div><!-- /header -->
- 
+	<div data-role="header" data-position="inline">
+		<h1>Reports</h1>
+		<a href="index.html" data-icon="check" class="ui-btn-right">Report Shift</a>
+		<a href="index.html" data-icon="check" class="ui-btn-right">Report Sessions</a>
+	</div>
+	
 	<div data-role="content">	
-		<a href="#" data-role="button" data-theme="a">Report Shift</a> 
-		<a href="#" data-role="button" data-theme="a">Report Sessions</a>
+		<a href="#" data-role="button" data-theme="a">Previous Month</a>
+		<a href="#" data-role="button" data-theme="a">Next Month</a>
 	</div><!-- /content -->
 
+	
+	
 	
 	
 	
