Change-Id: I1f0a506367f1de2e705cb850584be471a43dfadc Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -14,13 +14,13 @@
 
 	<div data-role="header" data-position="inline">
 		<h1>Reports</h1>
-		<a href="index.html" data-icon="check" class="ui-btn-right">Report Shift</a>
-		<a href="index.html" data-icon="check" class="ui-btn-right">Report Sessions</a>
+		<a href="index.html" data-icon="plus" class="ui-btn-right">Report Shift</a>
+		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
 	<div data-role="content">	
-		<a href="#" data-role="button" data-theme="a">Previous Month</a>
-		<a href="#" data-role="button" data-theme="a">Next Month</a>
+		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
+		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
 	</div><!-- /content -->
 
 	
