Change-Id: I845ff3fff134c083417881dd902aa9ced9ee5370 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -21,13 +21,16 @@
 	<div data-role="content">	
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
+		
+		<br/>	
+		<ul data-role="listview" data-theme="g">
+			<li><a href="acura.html">Acura</a></li>
+			<li><a href="audi.html">Audi</a></li>
+			<li><a href="bmw.html">BMW</a></li>
+		</ul>
+		
 	</div><!-- /content -->
 
-	
-	
-	
-	
-	
 </div><!-- /page -->
 
 </body>
