Change-Id: I37cd35b4e8f02c625d4e119030a6fdff4685e5aa Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -21,8 +21,9 @@
 	<div data-role="content">	
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
-		
-		<br/>	
+	</div><!-- /content -->
+
+	<div data-role="content">	
 		<ul data-role="listview" data-theme="g">
 			<li><a href="acura.html">Acura</a></li>
 			<li><a href="audi.html">Audi</a></li>
