--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -24,7 +24,7 @@
 	</div><!-- /content -->
 
 	<div data-role="content">	
-		<ul data-role="listview" data-theme="g">
+		<ul data-role="listview" data-theme="b">
 			<li><a href="acura.html">Acura</a></li>
 			<li><a href="audi.html">Audi</a></li>
 			<li><a href="bmw.html">BMW</a></li>
