--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -18,11 +18,11 @@
 		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
-	<div data-role="content">	
+	<header data-role="header">  
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
-	</div><!-- /content -->
-
+   </header>  
+	
 	<div data-role="content">	
 		<ul data-role="listview" data-theme="b">
 			<li><a href="acura.html">Acura</a></li>
