--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,15 +1,23 @@
 <!DOCTYPE html> 
 <html> 
-	<head> 
+<head> 
 	<title>My Page</title> 
 	<meta http-equiv="content-type" content="text/html;charset=windows-1255"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		$("#mainList").append('<li><a href="index.html">Acura</a></li>');
+		$('#mainList').listview('refresh');
+		
+	});
+
+	</script>
+	
 </head> 
 <body> 
-
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
@@ -18,20 +26,19 @@
 		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
-	<header data-role="header">  
+	<div data-role="content">	
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
-   </header>  
-	
-	<div data-role="content">	
-		<ul data-role="listview" data-theme="b">
-			<li><a href="acura.html">Acura</a></li>
-			<li><a href="audi.html">Audi</a></li>
-			<li><a href="bmw.html">BMW</a></li>
-		</ul>
-		
 	</div><!-- /content -->
 
+	<div data-role="content">	
+		<ul id="mainList" data-role="listview" data-theme="b">
+
+		</ul>
+	</div><!-- /content -->
+
+	
+	
 </div><!-- /page -->
 
 </body>
