Change-Id: I68c7a0377b1bae8a0e6ea9527774332d039ea842 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,7 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
-			    items.push('<li><a href="index.html">test</a></li>');
+			    items.push('<li><a href="index.html">' + key + value + '</a></li>');
 			  });
   			  $("#mainList").append(items.join(''));
 			  $('#mainList').listview('refresh');
