--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,6 +12,8 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
+				  alert(key);
+				  alert(val);
 			    items.push('<li><a href="index.html">test</a></li>');
 			  });
   			  $("#mainList").append(items.join(''));
