Change-Id: If87aef2cad90752fc743f7f7469cd930dab818ca Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,9 +12,7 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
-				  alert(key);
-				  alert(val);
-			    items.push('<li><a href="index.html">test</a></li>');
+			    items.push('<li><a href="index.html">' + val.date + '</a></li>');
 			  });
   			  $("#mainList").append(items.join(''));
 			  $('#mainList').listview('refresh');
