--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,7 +30,7 @@
 		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
-	<div data-role="content">	
+	<div data-role="navbar" >	
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
 		Month: <?= $this->month ?>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
