--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -32,7 +32,7 @@
 	
 	<div data-role="navbar" >	
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
-		Month: <?= $this->month ?>
+		<a href="#">Month <?= $this->month ?></a>
 		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
 	</div><!-- /content -->
 
