Change-Id: I9f5187c667f5d60161955f0b84efdab8fce10064 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -31,9 +31,9 @@
 	</div>
 	
 	<div data-role="navbar" >	
-		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
-		<a href="#">Month <?= $this->month ?></a>
-		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
+		<a href="#" data-role="button" data-icon="arrow-l" data-theme="a">Previous Month</a>
+		<a href="#" data-role="button" data-theme="a">Month <?= $this->month ?></a>
+		<a href="#" data-role="button" data-icon="arrow-r" data-theme="a">Next Month</a>
 	</div><!-- /content -->
 
 	<div data-role="content">	
