Change-Id: Id0bc66a933f7796b85030a7870d563853c7928c8 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,10 +30,17 @@
 		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
-	<div data-role="navbar" >	
-		<a href="#" data-role="button" data-icon="arrow-l" data-theme="a">Previous Month</a>
-		<a href="#" data-role="button" data-theme="a">Month <?= $this->month ?></a>
-		<a href="#" data-role="button" data-icon="arrow-r" data-theme="a">Next Month</a>
+	<div data-role="content">	
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#">One</a></li>
+				<li><a href="#">Two</a></li>
+				<li><a href="#">Three</a></li>
+			</ul>
+		</div><!-- /navbar -->
+		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
+		Month: <?= $this->month ?>
+		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
 	</div><!-- /content -->
 
 	<div data-role="content">	
