Change-Id: I5e0855ef06858af01e5b50426e1538e03e17b8d9 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -33,14 +33,14 @@
 	<div data-role="content">	
 		<div data-role="navbar">
 			<ul>
-				<li><a href="#">One</a></li>
+				<li><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></li>
 				<li><a href="#">Two</a></li>
-				<li><a href="#">Three</a></li>
+				<li><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></li>
 			</ul>
 		</div><!-- /navbar -->
-		<a href="#" data-role="button" data-inline="true" data-icon="arrow-l" data-theme="a">Previous Month</a>
+		<a href="#"  data-inline="true"  data-theme="a"></a>
 		Month: <?= $this->month ?>
-		<a href="#" data-role="button" data-inline="true" data-icon="arrow-r" data-theme="a">Next Month</a>
+		<a href="#" data-role="button" data-inline="true"  data-theme="a"></a>
 	</div><!-- /content -->
 
 	<div data-role="content">	
