--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -31,16 +31,11 @@
 	</div>
 	
 	<div data-role="content">	
-		<div data-role="navbar">
-			<ul>
-				<li><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></li>
-				<li><a href="#">Two</a></li>
-				<li><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></li>
-			</ul>
-		</div><!-- /navbar -->
-		<a href="#"  data-inline="true"  data-theme="a"></a>
-		Month: <?= $this->month ?>
-		<a href="#" data-role="button" data-inline="true"  data-theme="a"></a>
+		<ul>
+			<li><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></li>
+			<li><a href="#">Month: <?= $this->month ?></a></li>
+			<li><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></li>
+		</ul>
 	</div><!-- /content -->
 
 	<div data-role="content">	
