Change-Id: I28d9d2992d6b9abfc571bd0db8a73c7420385cfc Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -32,9 +32,9 @@
 	
 	<div data-role="content">	
 		<ul>
-			<li><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></li>
-			<li><a href="#">Month: <?= $this->month ?></a></li>
-			<li><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></li>
+			<li><a href="#" data-inline="true" data-role="button" data-icon="arrow-l">Previous Month</a></li>
+			<li><a href="#" data-inline="true">Month: <?= $this->month ?></a></li>
+			<li><a href="#" data-inline="true" data-role="button" data-icon="arrow-r">Next Month</a></li>
 		</ul>
 	</div><!-- /content -->
 
