Change-Id: Ie5fcccb8f040f95418fb8d00b8d9a813b5729964 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -26,8 +26,8 @@
 
 	<div data-role="header" data-position="inline">
 		<h1>Reports</h1>
-		<a href="index.html" data-icon="plus" class="ui-btn-right">Report Shift</a>
-		<a href="index.html" data-icon="plus" class="ui-btn-left">Report Sessions</a>
+		<a href="index/reportshift" data-icon="plus" class="ui-btn-right">Report Shift</a>
+		<a href="index/reportsession" data-icon="plus" class="ui-btn-left">Report Sessions</a>
 	</div>
 	
 	<div data-role="content">	
