--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -33,7 +33,7 @@
 	<div data-role="content">	
 		<div class="ui-grid-b">
 			<div class="ui-block-a"><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></div>
-			<div class="ui-block-b"><a href="#" data-role="button"></a></div>
+			<div class="ui-block-b"><a href="#" data-role="button"><?= $this->month ?></a></div>
 			<div class="ui-block-c"><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></div>
 		</div><!-- /grid-b -->	
 	</div><!-- /content -->
