--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -34,7 +34,7 @@
 		<div class="ui-grid-b">
 			<div class="ui-block-a"><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></div>
 			<div class="ui-block-b"><?= $this->month ?></div>
-			<div class="ui-block-c"><a href="#" data-role="button" data-icon="arrow-r">Next Month</a></div>
+			<div class="ui-block-c"><a href="#" data-role="button" data-iconpos="right" data-icon="arrow-r">Next Month</a></div>
 		</div><!-- /grid-b -->	
 	</div><!-- /content -->
 
