--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -26,15 +26,15 @@
 
 	<div data-role="header" data-position="inline">
 		<h1>Reports</h1>
-		<a href="index/reportshift" data-icon="plus" class="ui-btn-right">Report Shift</a>
-		<a href="index/reportsession" data-icon="plus" class="ui-btn-left">Report Sessions</a>
+		<a href="index/reportshift" data-icon="arrow-l" class="ui-btn-right">Previous Month</a>
+		<a href="index/reportsession" data-icon="arrow-r" data-iconpos="right" class="ui-btn-left">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
 		<div class="ui-grid-b">
-			<div class="ui-block-a"><a href="#" data-role="button" data-icon="arrow-l">Previous Month</a></div>
+			<div class="ui-block-a"><a href="index/reportshift" data-role="button" data-icon="plus">Report Shift</a></div>
 			<div class="ui-block-b"><?= $this->month ?></div>
-			<div class="ui-block-c"><a href="#" data-role="button" data-iconpos="right" data-icon="arrow-r">Next Month</a></div>
+			<div class="ui-block-c"><a href="index/reportsession" data-role="button" data-icon="plus">Report Sessions</a></div>
 		</div><!-- /grid-b -->	
 	</div><!-- /content -->
 
