Change-Id: I5ef80c62fbbae45a23989e38bc73bc0323b50323 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -26,8 +26,8 @@
 
 	<div data-role="header" data-position="inline">
 		<h1>Reports</h1>
-		<a href="index/reportshift" data-icon="arrow-l" class="ui-btn-right">Previous Month</a>
-		<a href="index/reportsession" data-icon="arrow-r" data-iconpos="right" class="ui-btn-left">Next Month</a>
+		<a href="index/reportshift" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
+		<a href="index/reportsession" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
