--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,7 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
-			    items.push('<li><a href="index.html" data-theme="e">>' + val.date + '</a></li>');
+			    items.push('<li><a href="index.html" data-theme="d">' + val.date + '</a></li>');
 			  });
   			  $("#mainList").append(items.join(''));
 			  $('#mainList').listview('refresh');
