Change-Id: I9949ffe5e87892854a3661c34a1832e8014acb98 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,11 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
-			    items.push('<li data-theme="d"><a href="index.html" >' + val.date + '</a></li>');
+				if (val.type == "sessions") {
+			    	items.push('<li data-theme="a"><a href="index.html" >' + val.date + '</a></li>');
+				} else {
+			    	items.push('<li data-theme="b"><a href="index.html" >' + val.date + '</a></li>');
+				}
 			  });
   			  $("#mainList").append(items.join(''));
 			  $('#mainList').listview('refresh');
