Change-Id: Ibb6eefaf164f36bd42be340c9909305533a4362a Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -13,7 +13,7 @@
 			  var items = [];
 			  $.each(data, function(key, val) {
 				if (val.type == "sessions") { 
-			    	items.push('<li data-theme="c"><a href="index.html" >' + val.date + '</a></li>');
+			    	items.push('<li data-theme="b"><a href="index.html" >' + val.date + '</a></li>');
 				} else {
 			    	items.push('<li data-theme="d"><a href="index.html" >' + val.date + '</a></li>');
 				}
