--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -15,7 +15,7 @@
 				if (val.type == "sessions") { 
 			    	items.push('<li data-theme="b"><a href="index.html" >' + val.date + '</a></li>');
 				} else {
-			    	items.push('<li data-theme="d"><a href="index.html" >' + val.date + '</a></li>');
+			    	items.push('<li data-theme="c"><a href="index.html" >' + val.date + '</a></li>');
 				}
 			  });
   			  $("#mainList").append(items.join(''));
