--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,7 @@
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  $.each(data, function(key, val) {
-				if (val.type == "sessions") { 
+				if (val.type != "sessions") { 
 			    	items.push('<li data-theme="b"><a href="index.html" >' + val.date + '</a></li>');
 				} else {
 			    	items.push('<li data-theme="c"><a href="index.html" >' + val.date + '</a></li>');
