Change-Id: I38d3bd91a237462ea11a953520a1975320050270 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -45,7 +45,9 @@
 	<div data-role="content">	
 		<ul id="mainList" data-role="listview" data-theme="b">
 		</ul>
+	</div><!-- /content -->
 
+	<div data-role="content">	
 		<form action="form.php" method="post">
 			<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked" />
      		<label for="radio-choice-1">Cat</label>
