Change-Id: I77cf20ccd9f6b99bf3da539c88c3af754dc9c85b Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,15 +30,15 @@
 
 	<div data-role="header" data-position="inline">
 		<h1>Reports</h1>
-		<a href="index/reportshift" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
-		<a href="index/reportsession" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
+		<a href="index/" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
+		<a href="index/" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
 		<div class="ui-grid-b">
-			<div class="ui-block-a"><a href="index/reportshift" data-role="button" data-icon="plus">Report Shift</a></div>
+			<div class="ui-block-a"></div>
 			<div class="ui-block-b"><?= $this->month ?></div>
-			<div class="ui-block-c"><a href="index/reportsession" data-role="button" data-icon="plus">Report Sessions</a></div>
+			<div class="ui-block-c"><a href="index/insert" data-role="button" data-icon="plus">Report</a></div>
 		</div><!-- /grid-b -->	
 	</div><!-- /content -->
 
@@ -47,67 +47,6 @@
 		</ul>
 	</div><!-- /content -->
 
-	<div data-role="content">	
-		<form action="form.php" method="post">
-			<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked" />
-     		<label for="radio-choice-1">Cat</label>
-
-	     	<input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2"  />
-	     	<label for="radio-choice-2">Dog</label>
-		
-			<label for="select-choice-month">Month</label>
-			<select name="select-choice-month" id="select-choice-month">
-				<option>Month</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-				<option value="7">7</option>
-				<option value="8">8</option>
-				<option value="9">9</option>
-				<option value="10">10</option>
-				<option value="11">11</option>
-				<option value="12">12</option>
-			</select>
-			
-				<label for="select-choice-day">Day</label>
-			<select name="select-choice-day" id="select-choice-day">
-				<option>Day</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-				<option value="7">7</option>
-				<option value="8">8</option>
-				<option value="9">9</option>
-				<option value="10">10</option>
-				<option value="11">11</option>
-				<option value="12">12</option>
-			</select>
-			
-			<label for="select-choice-year">Year</label>
-			<select name="select-choice-year" id="select-choice-year">
-				<option>Year</option>
-				<option value="2011">2012</option>
-				<option value="2011">2013</option>
-				<option value="2011">2014</option>
-			</select>		
-		
-			<div data-role="fieldcontain" class="ui-hide-label">
-				<label for="username">Comments:</label>
-				<input type="text" name="comments" id="comments" value="" placeholder="Comments"/>
-			</div>
-		</form>
-		
-		
-	</div><!-- /content -->
-
-	
-	
 </div><!-- /page -->
 
 </body>
