Change-Id: I8347b9bda44aa9c65bbe8f15e73ad367e5d2b7ad Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -29,7 +29,7 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="/" data-icon="delete">Cancel</a>
+		<a href="index" data-icon="delete">Cancel</a>
 		<h1>Reports</h1>
 	</div>
 	
