Change-Id: Ie1ac591c2881fc862d85bc0b56d2204f77874732 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -40,48 +40,53 @@
 	     	<input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2"  />
 	     	<label for="radio-choice-2">Sessions</label>
 		
-			<label for="select-choice-month">Month</label>
-			<select name="select-choice-month" id="select-choice-month">
-				<option>Month</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-				<option value="7">7</option>
-				<option value="8">8</option>
-				<option value="9">9</option>
-				<option value="10">10</option>
-				<option value="11">11</option>
-				<option value="12">12</option>
-			</select>
-			
-			<label for="select-choice-day">Day</label>
-			<select name="select-choice-day" id="select-choice-day">
-				<option>Day</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-				<option value="7">7</option>
-				<option value="8">8</option>
-				<option value="9">9</option>
-				<option value="10">10</option>
-				<option value="11">11</option>
-				<option value="12">12</option>
-			</select>
-			
-			<label for="select-choice-year">Year</label>
-			<select name="select-choice-year" id="select-choice-year">
-				<option>Year</option>
-				<option value="2011">2012</option>
-				<option value="2011">2013</option>
-				<option value="2011">2014</option>
-			</select>		
 		
+			<fieldset data-role="controlgroup" data-type="horizontal"> 
+			
+			
+				<label for="select-choice-month">Month</label>
+				<select name="select-choice-month" id="select-choice-month">
+					<option>Month</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+					<option value="6">6</option>
+					<option value="7">7</option>
+					<option value="8">8</option>
+					<option value="9">9</option>
+					<option value="10">10</option>
+					<option value="11">11</option>
+					<option value="12">12</option>
+				</select>
+				
+				<label for="select-choice-day">Day</label>
+				<select name="select-choice-day" id="select-choice-day">
+					<option>Day</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+					<option value="6">6</option>
+					<option value="7">7</option>
+					<option value="8">8</option>
+					<option value="9">9</option>
+					<option value="10">10</option>
+					<option value="11">11</option>
+					<option value="12">12</option>
+				</select>
+				
+				<label for="select-choice-year">Year</label>
+				<select name="select-choice-year" id="select-choice-year">
+					<option>Year</option>
+					<option value="2011">2012</option>
+					<option value="2011">2013</option>
+					<option value="2011">2014</option>
+				</select>
+			</fieldset>		
+			
 			<div data-role="fieldcontain" class="ui-hide-label">
 				<label for="username">Comments:</label>
 				<input type="text" name="comments" id="comments" value="" placeholder="Comments"/>
