--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -18,7 +18,7 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="" data-icon="delete">Cancel</a>
+		<a href="<?= $this->baseUrl("") ?>" data-icon="delete">Cancel</a>
 		<h1>Reports</h1>
 	</div>
 	
