--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -12,7 +12,7 @@
 		var d = new Date();
 		$('#select-choice-month').children()[d.getMonth()+1].selected=true;
 		$('#select-choice-day').children()[d.getDate()].selected=true;
-		$('#select-choice-year').children()[d.getFullYear()].selected=true;
+		$('#select-choice-year').children()[d.getFullYear() - 2011].selected=true;
 		$('#select-choice-month').selectmenu('refresh');
 		$('#select-choice-day').selectmenu('refresh');
 		$('#select-choice-year').selectmenu('refresh');
