--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -18,8 +18,11 @@
 		$('#select-choice-year').selectmenu('refresh');
 
 		$( "#save-btn" ).bind( "click", function(event, ui) {
-			  alert("dsafdsaf");
-			  $("#event-form" ).submit();
+			if ($("#radio-choice-1").checked == "checked") {
+
+			} else {
+				
+			}
 		});
 	});
 	</script>
@@ -29,7 +32,7 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="/<?= $this->baseUrl("")?>" data-icon="delete">Cancel</a>
+		<a href="<?= $this->baseUrl("")?>" data-icon="delete">Cancel</a>
 		<h1>Event</h1>
 		<a id="save-btn" href="index.html" data-icon="check" data-theme="b">Save</a>
 	</div>
