Change-Id: I4ef12fbecd45c4d41362561952803027a55091c7 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -11,11 +11,13 @@
 	$(document).ready(function() {
 		$.getJSON('index/list', function(data) {
 			  var items = [];
+			  
 			  $.each(data, function(key, val) {
+			    d = new Date(val.date); 
 				if (val.type != "sessions") { 
-			    	items.push('<li data-theme="b"><a href="index.html" >' + val.date + '</a></li>');
+			    	items.push('<li data-theme="b"><a href="index.html" >' + d.toLocaleDateString() + '</a></li>');
 				} else {
-			    	items.push('<li data-theme="c"><a href="index.html" >' + val.date + '</a></li>');
+			    	items.push('<li data-theme="c"><a href="index.html" >' + d.toLocaleDateString() + '</a></li>');
 				}
 			  });
   			  $("#mainList").append(items.join(''));
