Change-Id: Ic1c91dadc3d3896c2b328981ab1baf2aacfa3010 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -8,6 +8,14 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script type="text/javascript">
+	function getSelected(options) {
+		for ( var e in options) {
+			if (e.selected) {
+				return e.value;
+			}
+		}
+	}
+
 	$(document).ready(function() {
 		var d = new Date();
 		$('#select-choice-month').children()[d.getMonth()+1].selected=true;
