Change-Id: I7e1edc2399ef3b014ad41355992c1f0a59259617 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -61,7 +61,7 @@
 	<div data-role="header" data-position="inline">
 		<a href="<?= $this->baseUrl("")?>" data-icon="delete">Cancel</a>
 		<h1>Event</h1>
-		<a href="<?= $this->baseUrl("") ?> id="save-btn" data-icon="check" data-theme="b">Save</a>
+		<a href="<?= $this->baseUrl("")?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
 	</div>
 	
 	<div data-role="content">	
