--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -59,13 +59,13 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->baseUrl("")?>" data-icon="delete">Cancel</a>
+		<a href="<?= $this->url() ?>" data-icon="delete">Cancel</a>
 		<h1>Event</h1>
-		<a href="<?= $this->baseUrl("")?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
+		<a href="<?= $this->url() ?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
 	</div>
 	
 	<div data-role="content">	
-		<form id="event-form" action="form.php" method="post">
+		<form id="event-form">
 			<fieldset data-role="controlgroup" data-type="horizontal" >
 				<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked" />
 	     		<label for="radio-choice-1">Shift</label>
