Change-Id: Ib1496e69ef400c84caf9715d702566a605b6ce79 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -59,9 +59,9 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->url() ?>" data-icon="delete">Cancel</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" data-icon="delete">Cancel</a>
 		<h1>Event</h1>
-		<a href="<?= $this->url() ?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?> ?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
 	</div>
 	
 	<div data-role="content">	
