Change-Id: Ibceabaa71b1c260ef22bf3bc2ed3dd7c319ad3bd Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -18,6 +18,11 @@
 	}
 
 	$(document).ready(function() {
+
+		$(document).bind("mobileinit", function(){
+			  $.mobile.ajaxEnabled = false;
+		});
+		
 		var d = new Date();
 		$('#select-choice-month').children()[d.getMonth()+1].selected=true;
 		$('#select-choice-day').children()[d.getDate()].selected=true;
