--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -9,6 +9,11 @@
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
+		$(document).bind("mobileinit", function(){
+			  $.mobile.ajaxEnabled = false;
+		});
+	
+
 		$.getJSON('index/list', function(data) {
 			  var items = [];
 			  
