--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -64,9 +64,9 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" data-icon="delete">Cancel</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" data-icon="delete" rel="external">Cancel</a>
 		<h1>Event</h1>
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?> ?>" id="save-btn" data-icon="check" data-theme="b">Save</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?> ?>" id="save-btn" data-icon="check" data-theme="b" rel="external">Save</a>
 	</div>
 	
 	<div data-role="content">	
