Change-Id: I07058974d54f34e276a07462420bcec3998d2b4d Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -43,7 +43,7 @@
 					  type: 'POST',
 					  url: 'index/reportshift',
 					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function() { alert ("ok"); }  ,
+					  success: function($m) { alert ("ok"); }  ,
 					});
 			} else {
 				// Sessions
@@ -51,7 +51,7 @@
 					  type: 'POST',
 					  url: 'index/reportsession',
 					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function() { alert ("ok"); }  ,
+					  success: function($m) { alert ("ok"); }  ,
 				});
 			}
 			return true;
