Change-Id: I1057d6e1a2fdc051b923e9d42760788b0df1aa88 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -43,7 +43,9 @@
 					  type: 'POST',
 					  url: 'index/reportshift',
 					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function($m) { alert ("ok"); }  ,
+					  success: function($m) { 
+						  alert ("ok"); 
+					  }  ,
 					});
 			} else {
 				// Sessions
@@ -51,7 +53,9 @@
 					  type: 'POST',
 					  url: 'index/reportsession',
 					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function($m) { alert ("ok"); }  ,
+					  success: function($m) { 
+						  alert ("ok"); 
+					  }  ,
 				});
 			}
 			return true;
